--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
+    "nodemailer": "^6.10.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
